--- a/Bayser-Portal/productos/css/basculas_precision.css
+++ b/Bayser-Portal/productos/css/basculas_precision.css
@@ -24,16 +24,15 @@ header{
 
 nav{
     width: 100%;
-    background-color:rgba(20, 19, 19, 0.68);
-    overflow: auto;
-    margin-top: -30px;
-    text-align: center;
-    position: fixed;
-    margin: -px;
-    margin-bottom: 20px;
-    height: auto;
-    padding:  0;
-    z-index: 10;   
+    background-color: rgba(20, 19, 19, 0.68);
+     margin-top: -30px;
+     text-align: center;
+     position: fixed;
+     margin: -px;
+     margin-bottom: 20px;
+     height: auto;
+     padding:  0;
+     z-index: 10;   
 }
 
 header nav ul{
@@ -55,6 +54,7 @@ header nav ul li a{
     padding: 17px 15px;
     text-decoration: none;
     text-align: center;
+    color: #333333;
     color: white;
     transition: all 0.4s linear;
     font-family: 'Baloo Thambi 2', cursive;
@@ -83,42 +83,66 @@ header nav ul li a:hover::before{
 }
 
 ul li ul li {
+
     float: left;
-}
+    }
     
-ul li ul{
-    display: none;
-    position: relative;
-    width: 200px;
-    padding: 10px 15px;    
-}
-
-li:hover>ul{
-    display: block;    
-}
-
+    
+    
+    ul li ul{
+        display: none;
+        position: relative;
+        width: 200px;
+        padding: 10px 15px;
+    
+    }
+    li:hover>ul{
+        display: block;
+    
+    }
 #body{
-    width: 100%;
-    height: 0px;
+	width: 100%;
+	height: 0px;
 }
-
 /*Icono de la empresa*/
 .logo{
     position: relative;
     margin-top: 29px;
     margin-bottom: -10px;
     width: 50px;
-    left: 10px;        
+    left: 10px; 
 }
-    
-.logo .imgnav{        
-    float: left;
-    left: 10px;
-    width:100px;
-    height: 100%;
-    top: 3px;
-    margin-bottom: 5px;
+
+    .logo .imgnav{
+           
+           float: left;
+            left: 10px;
+            width:100px;
+            height: 100%;
+            top: 3px;
+            margin-bottom: 5px;
+    } 
+
+header .btn_hamburger{
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    top: 30px;
+    right: 7px;
+    cursor: pointer;
 }
+
+header .btn_hamburger div{
+    width: 90%;
+    height: 7px;
+    border-radius: 3px;
+    background-color: white;
+}
+
 
 ul,ol{
 	list-style: none;	
@@ -784,10 +808,6 @@ footer  hr{
 }
      
 /*Responsive del slider*/   
-    
-header nav ul li{
-    display: none;
-}
 
 .matriz-basculas{
     display: flex;
@@ -932,6 +952,42 @@ footer{
     font-size:  20px;
     flex-basis: 100%;
 }
+
+/*nav*/
+header nav ul li a{
+    width: 100vw;
+}
+.logo{
+    left: 35.5vw;
+}
+
+header .btn_hamburger{
+    display: flex;
+}
+
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
+
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
+
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+
+
+
 }
 
 @media screen and (min-width:481px){
@@ -1086,10 +1142,6 @@ footer{
     
 /*Responsive del slider*/   
 
-header nav ul li{
-    display: none;
-}
-
 .matriz-basculas{
     display: flex;
     flex-direction: row;
@@ -1238,6 +1290,41 @@ footer{
     font-size:  20px;
     flex-basis: 100%;
 }
+
+/*nav*/
+header nav ul li a{
+    width: 100vw;
+}
+
+.logo{
+    left: 41vw;
+}
+
+header .btn_hamburger{
+    display: flex;
+}
+
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
+
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
+
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+
 }
 
 @media screen and (min-width:768px){
@@ -1392,9 +1479,6 @@ footer{
     
 /*Responsive del slider*/   
 
- header nav ul li{
-    display: none;
-}
 
 .matriz-basculas{
     display: flex;
@@ -1502,6 +1586,44 @@ footer{
     font-size:  20px;
     flex-basis: 100%;
 }
+/*nav*/
+header nav ul li a{
+    width: 100vw;
+}
+    .logo{
+        left: 43.5vw;
+    }
+
+    header .btn_hamburger{
+        display: flex;
+        transition: width 0.5s ease-in;
+    }
+
+    header nav ul{
+        overflow: hidden;
+        width: 100vw;
+        transition: max-height 1s ease-in;    
+    }
+
+    header nav ul.hidden{
+        max-height: 0vh;
+        transition: max-height 1s ease-in;
+    }   
+
+    header nav ul.hidden .btn_hamburger div:nth-child(1){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+
+    header nav ul.hidden .btn_hamburger div:nth-child(3){
+        width: 60%;
+        transition: width 0.1s linear;
+    }
+
+
+
+
+
 }
 
 @media screen and (min-width:1025px){
@@ -1663,10 +1785,7 @@ footer{
 }
 
 /*Responsive del slider*/   
-    
-header nav ul li{
-    display: inline-block;
-}
+
 
 .matriz-basculas{
     display: flex;
@@ -1796,6 +1915,60 @@ footer{
     font-size:  25px;
     flex-basis: 100%;
 }
+
+
+/*nav*/
+
+header nav ul li a{
+        width: 100%;
+    }
+
+    header .btn_hamburger{
+        display: none;
+        overflow: hidden;
+    }
+        .logo{
+            left: 10px;
+        }
+    
+        header nav ul{
+            overflow: visible;
+            width: 100vw;
+            transition: max-height 1s ease-in;    
+        }
+        ul li ul li {
+            float: left;
+            }
+            
+            
+            
+            ul li ul{
+                display: none;
+                position: relative;
+                width: 200px;
+                padding: 10px 15px;
+            
+            }
+            li:hover>ul{
+                display: block;
+            
+            }
+        header nav ul.hidden{
+            max-height: 100vh;
+            transition: max-height 1s ease-in;
+        }   
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(1){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+    
+        header nav ul.hidden .btn_hamburger div:nth-child(3){
+            width: 60%;
+            transition: width 0.1s linear;
+        }
+
+
 }
 
 
