--- a/Bayser-Portal/Formulario 2/formulario2.css
+++ b/Bayser-Portal/Formulario 2/formulario2.css
@@ -15,11 +15,12 @@ body{
 
     
 header{
-    background-color:transparent;
-    height: 59.6167px;
+    width: 100%;
+    height: 1000px;
+    background-image: url(img/form_fondo.jpg);
+    -webkit-background-size: cover;
     background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 nav{
@@ -147,42 +148,9 @@ header .btn_hamburger div{
 
 /*FORMULARIO*/
 
-label {
-    display: inline-block;
-    min-width: 180px;
-  }
-  
-  input,
-  textarea,
-  select {
-    display: inline-block;
-    padding: 0.5em 1em;
-    font-size: 1em;
-    outline: none;
-    border-radius: 3px;
-  }
-  input.cantidadp{
-    display: inline-block;
-    padding: 0.5em 1em;
-    font-size: 1em;
-    outline: none;
-    border-radius: 3px;
-  }
-  
-  select {
-    border: solid 1px #000;
-    box-sizing: border-box;
-    font-size: 1rem;
-  }
-  
-  input.error {
+ input.error {
     outline-style: solid;
     outline-color: maroon;
-  }
-  
-  textarea {
-    /* Para evitar que el textarea sea manipulado (tamaño) por el usuario*/
-    resize: none;
   }
 
 input.error {
@@ -190,14 +158,97 @@ input.error {
     outline-color: #2196f3;
   }
   .errorClass{
-    font-weight: 600;
+    font-weight: 200;
     color:#2196f3;
   }
 
-.informacion{
+.informacion .form .form-header .form-title{
+    font-weight: normal;
+    font-family: sans-serif;
+    color:#276ff5;
+    text-align: center;
+    padding: 14px 0;
+}
+
+.informacion .form .form-subtitle{
+    font-weight: normal;
+    font-family: sans-serif;
+    color:#fff;
+    padding: 14px 0;   
+}
+
+.informacion .form .form-header .form-title span{
+    color: #fff;
+}
+
+.informacion .form{
+    position: absolute;
+    top: 50px;
+    right: 330px;
+    background: rgba(0,0,0,.6);
     width: 100%;
-    height: 1000px;
-    background-color: white;
+    max-width: 650px;
+    margin: auto;
+    padding: 5px 35px;
+    /* margin-top: 30px; */
+    padding-bottom: 30px;
+    border-radius: 3px;
+
+    
+}
+
+.informacion .form .form-label{
+    display: block;
+    color: #276ff5;
+    font-size: 16px;
+    font-family: Roboto;
+    position: relative;
+}
+
+.informacion .form .form-input, .form-textarea{
+    background: rgba(0,0,0,.7);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #31569b;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #FFF;
+    font-family: Roboto;   
+}
+
+.informacion .form .form-extra{
+    background: rgba(0,0,0,.7);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #276ff5;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #FFF;
+    font-family: Roboto; 
+}
+
+.informacion .form .form-textarea{
+    resize: vertical;
+    max-height: 150px;
+    min-height: 50px;
+}
+
+.informacion .form .btn-submit{
+    width: 100%;
+    font-family: Roboto;
+    outline: none;
+    background: #276ff5;
+    font-size: 16px;
+    border: none;
+    color: #fff;
+    padding: 15px 0;
+    cursor: pointer;
 }
 
 
