--- a/Bayser-Portal/Formulario 1/formulario1.css
+++ b/Bayser-Portal/Formulario 1/formulario1.css
@@ -21,14 +21,12 @@ header{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; */
-
     width: 100%;
     height: 1000px;
     background-image: url(img/form_fondo.jpg);
     -webkit-background-size: cover;
     background-size: cover;
     background-attachment: fixed;
-
 }
 
 nav{
@@ -69,7 +67,7 @@ header nav ul li a{
     font-family: 'Baloo Thambi 2', cursive;
     position: relative;
     background: darkgreen(#2196f3,15);
-    text-transform: uppercase;
+    text-transform: initial;
 }
 
 header nav ul li a::before{
@@ -92,23 +90,20 @@ header nav ul li a:hover::before{
 }
 
 ul li ul li {
-
     float: left;
-    }
-    
-    
-    
-    ul li ul{
-        display: none;
-        position: relative;
-        width: 200px;
-        padding: 10px 15px;
-    
-    }
-    li:hover>ul{
-        display: block;
-    
-    }
+}
+        
+ul li ul{
+    display: none;
+    position: relative;
+    width: 200px;
+    padding: 10px 15px;
+}
+
+li:hover>ul{
+    display: block;
+}
+
 #body{
 	width: 100%;
 	height: 0px;
@@ -122,47 +117,41 @@ ul li ul li {
     left: 10px; 
 }
 
-    .logo .imgnav{
-           
-           float: left;
-            left: 10px;
-            width:100px;
-            height: 100%;
-            top: 3px;
-            margin-bottom: 5px;
-    } 
+.logo .imgnav{           
+    float: left;
+    left: 10px;
+    width:100px;
+    height: 100%;
+    top: 3px;
+    margin-bottom: 5px;
+} 
 
-    header .btn_hamburger{
-        display: none;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        width: 45px;
-        height: 45px;
-        position: absolute;
-        top: 30px;
-        right: 7px;
-        cursor: pointer;
-    }
+header .btn_hamburger{
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    top: 30px;
+    right: 7px;
+    cursor: pointer;
+}
     
-    header .btn_hamburger div{
-        width: 90%;
-        height: 7px;
-        border-radius: 3px;
-        background-color: white;
-    }
+header .btn_hamburger div{
+    width: 90%;
+    height: 5px;
+    border-radius: 5px;
+    background-color: white;
+}
 /*SLIDER*/
 
-
-
 /*CUERPO*/
-
 
 /* Formulario Validaciones */
 
  
-
-
 /* Formulario */
 /* .informacion{
     width: 100%;
@@ -203,9 +192,7 @@ ul li ul li {
     padding: 5px 35px;
     /* margin-top: 30px; */
     padding-bottom: 30px;
-    border-radius: 3px;
-
-    
+    border-radius: 3px;    
 }
 
 .informacion .form .form-label{
@@ -262,7 +249,6 @@ ul li ul li {
     cursor: pointer;
 }
 
-/*455961-30383f*/
 footer {
     position: relative;
     align-self: flex-end;
@@ -277,7 +263,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-  }
+}
 
 .redes-sociales{
     width: 100%;
@@ -298,7 +284,7 @@ footer {
 }
 
 .enlace-mail:hover>.span-email{
-   width: 233px;
+    width: 233px;
     transition: .3s;
     list-style: none;
     text-decoration: none;
@@ -321,8 +307,6 @@ footer {
     position: relative;
  }
 
-
-
 .enlace-facebook{
     display: flex;
     flex-wrap: wrap;
@@ -335,16 +319,16 @@ footer {
 
 .enlace-facebook:hover>.span-facebook{
     width: 180px;
-     transition: .3s;
-     list-style: none;
-     text-decoration: none;
-     color: white;
-     display: flex;
-     align-items: center;
-     position: relative;
- }
+    transition: .3s;
+    list-style: none;
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
 
- .span-facebook{
+.span-facebook{
     font-size: 20px;
     width: 180px; 
     display: none;
@@ -497,7 +481,6 @@ footer {
     justify-content: center;
 }
 
-/*2196f3 - 00ff00*/
 .pregunta-span{
     background: #2196f3;
     transition: 1s;
@@ -526,8 +509,8 @@ footer {
     color: white;
     font-size:  25px;
     top: 5px;
-   justify-content: center;
-   width: 100%;
+    justify-content: center;
+    width: 100%;
 }
     
 .mensaje2{
@@ -545,175 +528,205 @@ footer  hr{
 }
 
 @media screen and (min-width:320px){
-    header nav ul li a{
-        width: 100vw;
-    }
-    .logo{
-        left: 35.5vw;
-    }
+.logo .imgnav{
+    width: 6em;
+    height: 3em;
+}
 
-    header .btn_hamburger{
-        display: flex;
-    }
+header nav ul li a{
+    width: 100vw;
+    font-size: 1em;
+}
 
-    header nav ul{
-        overflow: hidden;
-        width: 100vw;
-        transition: max-height 1s ease-in;    
-    }
+.logo{
+    left: 35.5vw;
+}
+
+header .btn_hamburger{
+    display: flex;
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    top: 40px;
+    right: 15px;
+}
+
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
     
-    header nav ul.hidden{
-        max-height: 0vh;
-        transition: max-height 1s ease-in;
-    }   
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
 
-    header nav ul.hidden .btn_hamburger div:nth-child(1){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 
-    header nav ul.hidden .btn_hamburger div:nth-child(3){
-        width: 60%;
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
         transition: width 0.1s linear;
     }
 }
 
 
 @media screen and (min-width:481px){
-    header nav ul li a{
-        width: 100vw;
-    }
+.logo .imgnav{
+    width: 8em;
+    height: 5em;
+}
 
-    .logo{
-        left: 41vw;
-    }
+header nav ul li a{
+    width: 100vw;
+    font-size: 1.1em;
+}
 
-    header .btn_hamburger{
-        display: flex;
-    }
+.logo{
+    left: 38vw;
+}
 
-    header nav ul{
-        overflow: hidden;
-        width: 100vw;
-        transition: max-height 1s ease-in;    
-    }
+header .btn_hamburger{
+    display: flex;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    top: 50px;
+    right: 15px;
+}
+
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
     
-    header nav ul.hidden{
-        max-height: 0vh;
-        transition: max-height 1s ease-in;
-    }   
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
 
-    header nav ul.hidden .btn_hamburger div:nth-child(1){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 
-    header nav ul.hidden .btn_hamburger div:nth-child(3){
-        width: 60%;
-        transition: width 0.1s linear;
-    }
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 }
 
 
 @media screen and (min-width:768px){
-    header nav ul li a{
-        width: 100vw;
-    }
-        .logo{
-            left: 43.5vw;
-        }
+.logo .imgnav{
+    width: 8.5em;
+    height: 5em;
+}
+
+header nav ul li a{
+    width: 100vw;
+    font-size: 1.1em;
+}
+
+.logo{
+    left: 43.5vw;
+}
     
-        header .btn_hamburger{
-            display: flex;
-            transition: width 0.5s ease-in;
-        }
+header .btn_hamburger{
+    display: flex;
+    transition: width 0.5s ease-in;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    top: 50px;
+    right: 18px;
+}
     
-        header nav ul{
-            overflow: hidden;
-            width: 100vw;
-            transition: max-height 1s ease-in;    
-        }
+header nav ul{
+    overflow: hidden;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
    
-        header nav ul.hidden{
-            max-height: 0vh;
-            transition: max-height 1s ease-in;
-        }   
+header nav ul.hidden{
+    max-height: 0vh;
+    transition: max-height 1s ease-in;
+}   
     
-        header nav ul.hidden .btn_hamburger div:nth-child(1){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
     
-        header nav ul.hidden .btn_hamburger div:nth-child(3){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-        
-    }
-
-
-
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+}
 
 @media screen and (min-width:1025px){
-    .col-3{
-        flex-basis: calc(100%/3);
-    }
+.logo .imgnav{
+    width: 6em;
+    height: 2.9em;
+}
 
-    /*nav*/
+.col-3{
+    flex-basis: calc(100%/3);
+}
+
+/*nav*/
         
-    header nav ul li a{
-        width: 100%;
-    }
+header nav ul li a{
+    width: 100%;
+    font-size: 18px;
+}
 
-    header .btn_hamburger{
-        display: none;
-        overflow: hidden;
-    }
-        .logo{
-            left: 10px;
-        }
-    
-        header nav ul{
-            overflow: visible;
-            width: 100vw;
-            transition: max-height 1s ease-in;    
-        }
-        ul li ul li {
-            float: left;
-            }
-            
-            
-            
-            ul li ul{
-                display: none;
-                position: relative;
-                width: 200px;
-                padding: 10px 15px;
-            
-            }
-            li:hover>ul{
-                display: block;
-            
-            }
-        header nav ul.hidden{
-            max-height: 100vh;
-            transition: max-height 1s ease-in;
-        }   
-    
-        header nav ul.hidden .btn_hamburger div:nth-child(1){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-        header nav ul.hidden .btn_hamburger div:nth-child(3){
-            width: 60%;
-            transition: width 0.1s linear;
-        }
-    
-    
-    
+header .btn_hamburger{
+    display: none;
+    overflow: hidden;
+}
 
+.logo{
+    left: 10px;
+}
+    
+header nav ul{
+    overflow: visible;
+    width: 100vw;
+    transition: max-height 1s ease-in;    
+}
 
+ul li ul li {
+    float: left;
+}
+                        
+ul li ul{
+    display: none;
+    position: relative;
+    width: 200px;
+    padding: 10px 15px;        
+}
 
+li:hover>ul{
+    display: block;        
+}
+
+header nav ul.hidden{
+    max-height: 100vh;
+    transition: max-height 1s ease-in;
+}   
+    
+header nav ul.hidden .btn_hamburger div:nth-child(1){
+    width: 60%;
+    transition: width 0.1s linear;
+}
+    
+header nav ul.hidden .btn_hamburger div:nth-child(3){
+    width: 60%;
+    transition: width 0.1s linear;
+}
 }
